Surface sync: Late arriving CF should not activate if dependent CF dropped

A late arriving CompositorFrame should not activate if the dependent CF has
been dropped. This can happen if a CompositorFrame is marked for destruction
and then pulled out of the destruction queue ("surface resurrection").

This CL ensures that when a surface is reset, a SurfaceDiscarded notification
is sent to the SurfaceDependencyTracker followed by SurfaceCreated to mimic
creating a new surface.

Bug: 796602
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: I226b23bedbb1855c0da8fada8341c09a2f4fd318
Reviewed-on: https://chromium-review.googlesource.com/847427
Commit-Queue: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526561}
Former-commit-id: 14b27fbb3889161127418a5e593ae2edd70fa790