components/viz/service/surfaces/surface_manager.h
@@ -274,7 +274,7 @@ class VIZ_SERVICE_EXPORT SurfaceManager {
   void RemoveTemporaryReference(const SurfaceId& surface_id, bool remove_range);
 
   // Marks old temporary references for logging and deletion.
-  void MarkOldTemporaryReference();
+  void MarkOldTemporaryReferences();
 
   // Removes the surface from the surface map and destroys it.
   void DestroySurfaceInternal(const SurfaceId& surface_id);
